Re-merge 297956@main without WTFReportBacktrace https://bugs.webkit.org/show_bug.cgi?id=296601 rdar://155266545

Reviewed by Eric Carlson.

Sending Messages::VideoPresentationManager::RequestRouteSharingPolicyAndContextUID to the process
with the media element in it keeps waking it up, causing HLS buffering to continue in the background.
Partially revert for now.

* Source/WebKit/UIProcess/Cocoa/VideoPresentationManagerProxy.mm:
(WebKit::VideoPresentationManagerProxy::requestRouteSharingPolicyAndContextUID):

Canonical link: https://commits.webkit.org/297965@main