Source/WebKit/UIProcess/Cocoa/VideoPresentationManagerProxy.mm
@@ -677,13 +677,11 @@ void VideoPresentationManagerProxy::applicationDidBecomeActive()
 
 void VideoPresentationManagerProxy::requestRouteSharingPolicyAndContextUID(PlaybackSessionContextIdentifier contextId, CompletionHandler<void(WebCore::RouteSharingPolicy, String)>&& callback)
 {
-    RefPtr page = m_page.get();
-    if (!page)
-        return callback({ }, { });
-    RefPtr process = WebProcessProxy::processForIdentifier(contextId.processIdentifier());
-    if (!process)
-        return callback({ }, { });
-    process->sendWithAsyncReply(Messages::VideoPresentationManager::RequestRouteSharingPolicyAndContextUID(contextId.object()), WTFMove(callback), page->webPageIDInProcess(*process));
+    // FIXME: This needs to be implemented for site isolation in a way that doesn't re-introduce rdar://155266545
+    if (RefPtr page = m_page.get())
+        page->protectedLegacyMainFrameProcess()->sendWithAsyncReply(Messages::VideoPresentationManager::RequestRouteSharingPolicyAndContextUID(contextId.object()), WTFMove(callback), page->webPageIDInMainFrameProcess());
+    else
+        callback({ }, { });
 }
 
 static Ref<PlatformVideoPresentationInterface> videoPresentationInterface(WebPageProxy& page, PlatformPlaybackSessionInterface& playbackSessionInterface)
